Bug 62255 - FILEOPEN: PPTX Import background color of table is set to light blue
Summary: FILEOPEN: PPTX Import background color of table is set to light blue
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: highest normal
Assignee: Matus Uzak
URL:
Whiteboard: BSA target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-12 18:41 UTC by Ofir
Modified: 2019-08-30 08:59 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
PPTX file (30.69 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2013-03-12 18:41 UTC, Ofir
Details
PDF export from PowerPoint 2007 showing the expected result (77.32 KB, application/pdf)
2013-03-12 18:41 UTC, Ofir
Details
screenshot 4.4.3 vs. 5.1.0 (37.39 KB, image/png)
2015-06-14 07:33 UTC, tommy27
Details
screenshot 4.4.3 vs. 5.1.0 vs. 5.2+ fixed (59.31 KB, image/jpeg)
2016-03-14 08:47 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ofir 2013-03-12 18:41:25 UTC
Created attachment 76432 [details]
PPTX file

The attached pptx shows the word Test without a background in Powerpoint 2007.

In LibreOffice the text box has a blue background.
Operating System: Windows 7
Version: 4.0.1.2 release
Comment 1 Ofir 2013-03-12 18:41:53 UTC
Created attachment 76433 [details]
PDF export from PowerPoint 2007 showing the expected result
Comment 2 Jacqueline Rahemipour 2013-03-23 21:04:05 UTC
Reproducible with LibO 4.0, Ubuntu.

The background color of the table changes to blue.
Comment 3 Ofir 2014-01-31 17:20:59 UTC
I can still reproduce with  LO 4.2.0.4 Win7
Comment 4 tommy27 2014-02-15 15:26:02 UTC
tested under Win7 64bit
reproducible in any LibO releases I have from 3.3.3 to 4.3.0.0.alpha0+ (*)

same thing in OOo 3.3.0 and AOO 4.0.0

(*) Build ID: a995462e6855061816c6529c366f20ace2b45868
TinderBox: Win-x86@42, Branch:master, Time: 2014-01-31_23:29:34

version --> inherited from OOo
Comment 5 Timur 2014-11-24 11:06:47 UTC
While background color of table is set to light blue on PPTX import in this example, it's set to dark blue on PPTX export.
Blue table export also happens in Bug 80340 with https://bugs.freedesktop.org/attachment.cgi?id=101499 and Bug 48089 with https://bugs.freedesktop.org/attachment.cgi?id=59269 if PPTX is saved first as PPTX.
Blue table export problem not reproducible if PPTX first saved as ODP and then as PPTX.
Tested with LO 4.4.0 alpha2. Export from 4.3 prevented by Bug 79731.
Comment 6 Julien Nabet 2014-11-30 16:02:30 UTC
MAB => highest (see https://bugs.freedesktop.org/show_bug.cgi?id=84480)
Comment 7 Ofir 2015-02-06 11:36:39 UTC
Reproducible with LO 4.4.0.4, Windows 7
Comment 8 A (Andy) 2015-03-26 18:17:19 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 9 Julien Nabet 2015-04-11 12:37:48 UTC
code pointer/bt:
Breakpoint 1, oox::drawingml::table::CreateTableStyle (styleId="{5C22544A-7EE6-4342-B048-85BDC9FD1C3A}")
    at /home/julien/compile-libreoffice/libreoffice/oox/source/drawingml/table/tableproperties.cxx:148
148	    TableStyle* pTableStyle = NULL;
(gdb) bt
#0  oox::drawingml::table::CreateTableStyle (styleId="{5C22544A-7EE6-4342-B048-85BDC9FD1C3A}")
    at /home/julien/compile-libreoffice/libreoffice/oox/source/drawingml/table/tableproperties.cxx:148
#1  0x00002aaac8c25607 in oox::drawingml::table::TableProperties::getUsedTableStyle (this=0x6028050, rFilterBase=..., isCreateTabStyle=@0x7ffffffef817: false)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/drawingml/table/tableproperties.cxx:248
#2  0x00002aaac8c25837 in oox::drawingml::table::TableProperties::pushToPropSet (this=0x6028050, rFilterBase=..., xPropSet=uno::Reference to (SvxTableShape *) 0x6007e58, 
    pMasterTextListStyle=std::shared_ptr (count 4, weak 0) 0x2b32bc0) at /home/julien/compile-libreoffice/libreoffice/oox/source/drawingml/table/tableproperties.cxx:269
#3  0x00002aaac8bfdb6e in oox::drawingml::Shape::createAndInsert (this=0x601ee40, rFilterBase=..., rServiceName="com.sun.star.drawing.TableShape", pTheme=0x2b3ec20, rxShapes=
    uno::Reference to (SdDrawPage *) 0x2ae3738, bClearText=false, bDoNotInsertEmptyTextBody=false, aParentTransformation=..., rShapeOrParentShapeFillProps=...)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/drawingml/shape.cxx:685
#4  0x00002aaac8da1931 in oox::ppt::PPTShape::addShape (this=0x601ee40, rFilterBase=..., rSlidePersist=..., pTheme=0x2b3ec20, 
    rxShapes=uno::Reference to (SdDrawPage *) 0x2ae3738, aTransformation=..., pShapeRect=0x0, pShapeMap=0x2af3bd8)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/ppt/pptshape.cxx:327
#5  0x00002aaac8db4f75 in oox::ppt::SlidePersist::createXShapes (this=0x2af3a10, rFilterBase=...)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/ppt/slidepersist.cxx:144
#6  0x00002aaac8da6f6c in oox::ppt::PresentationFragmentHandler::importSlide (this=0x2aab550, nSlide=0, bFirstPage=true, bImportNotesPage=true)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/ppt/presentationfragmenthandler.cxx:254
#7  0x00002aaac8da88a7 in oox::ppt::PresentationFragmentHandler::finalizeImport (this=0x2aab550)
    at /home/julien/compile-libreoffice/libreoffice/oox/source/ppt/presentationfragmenthandler.cxx:409
Comment 10 Julien Nabet 2015-04-11 12:44:20 UTC
Miklos: thought you might be interested in this one.
I provided a bt/codepointer in my previous comment.
Comment 11 Timur 2015-05-11 14:10:55 UTC
Seems like fixed in LO 5.0.
Comment 12 Ofir 2015-05-13 06:40:31 UTC
The issue is not fixed.
I can reproduce the issue with LO 5.0.0.0.alpha1 build from 2015-05-13_02:00:37,
Ubuntu 14.04.
Comment 13 Timur 2015-05-13 07:42:24 UTC
You're right, background color of table set to light blue on PPTX import is not fixed, and that's the issue here.
(In reply to Timur from comment #5)
> While background color of table is set to light blue on PPTX import in this
> example, it's set to dark blue on PPTX export.
What's fixed in LO 5.0 is blue background on PPTX export.
Comment 14 tommy27 2015-06-14 07:33:14 UTC
Created attachment 116518 [details]
screenshot 4.4.3 vs. 5.1.0

still present in LibO 4.4.3.2 and LibO 5.1.0.0.alpha1+
Build ID: bb9dad2ef23829b2500c9f99154bca6a8ba7d49a
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-11_23:59:18
Locale: en-US (it_IT)

as you can see in the screenshot now in 5.1.0 there's also a black border around the light blue background

so there's another additional bug in 5.1.0 master
Comment 15 tommy27 2015-06-14 07:43:58 UTC
I filed a separate report about the black border issue as Bug 92058
Comment 16 Commit Notification 2016-03-04 22:25:31 UTC
Matus Uzak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=87d0df65a93db4d720e25e8ef5da4068380b5c58

tdf#62255,tdf#92058: PPTX import: Incorrect inheritance of default table style

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Timur 2016-03-14 08:47:18 UTC
Created attachment 123551 [details]
screenshot 4.4.3 vs. 5.1.0 vs. 5.2+ fixed

Please backport to 5.1.