tdf#62255: PPTX import: Wrong background color of table.

The default table style defined in tableStyles.xml file can be used
when a table is initially inserted into a document.  It must not be
applied by default to any of the tables not referencing a table style
explicitly from the tableStyleId element.

Change-Id: I025cdfba352c87a32f9a1e297fbc8b9fc2c8c0a4